--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,7 +3,7 @@
   --light-green: #93d94e;
   --green: #164773;
   --medium-green: #164773;
-  --dark-green: #0B2B40;
+  --dark-green: #0b2b40;
   --white: #ffffff;
 }
 
@@ -25,7 +25,7 @@ img {
   max-height: 100vh;
   margin: 0 auto;
   display: grid;
- /*  box-shadow: 0 4px 20px 2px rgba(0, 0, 0, 0.4); */
+  /*  box-shadow: 0 4px 20px 2px rgba(0, 0, 0, 0.4); */
 }
 
 .slide-items {
@@ -83,7 +83,7 @@ img {
   display: block;
   height: inherit;
   background: rgba(255, 255, 255, 0.9);
-  border-radius: .4rem;
+  border-radius: 0.4rem;
   transform: translateX(-100%);
   animation: thumb 5s forwards linear;
 }
@@ -98,32 +98,43 @@ img {
 
 .about-container,
 .data-container {
-  padding: 0 .4rem;
+  padding: 0 0.4rem;
   max-width: 130rem;
+}
+
+.summary-content {
+  display: flex;
+}
+
+.summary-content details {
+  flex: 1;
+  text-align: center;
+}
+
+.summary-content summary {
+  font-weight: 700;
 }
 
 #about p {
   background-color: var(--green);
-  padding: .8rem;
+  padding: 0.8rem;
   text-align: justify;
-  border-radius: .8rem;
+  border-radius: 0.8rem;
   color: white;
 }
 
-#data p, #chart {
+#data p,
+#chart {
   background-color: var(--dark-green);
   color: white;
-  padding: .8rem;
+  padding: 0.8rem;
   text-align: justify;
-  border-radius: .8rem;
+  border-radius: 0.8rem;
 }
-
-
 
 .form-container {
   width: 100%;
   height: auto;
-
 }
 
 .form-container h2 {
@@ -201,7 +212,7 @@ legend {
   font-size: 1.6rem;
   font-weight: 600;
   color: #838383;
-  margin-left: .8rem;
+  margin-left: 0.8rem;
   transition: sll 300ms ease-in-out;
 }
 
